--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/automatminer
     docker:
-      - image: circleci/python:3.6.2
+      - image: circleci/python:3.7.1
         environment:
           CODACY_PROJECT_TOKEN: "0cdf090f6d5f4f8783fcf3ce04c6a1d6"
           CI: "CIRCLE"
@@ -17,7 +17,7 @@ jobs:
             . test_env/bin/activate
             pip install --upgrade pip
             pip install --quiet -r requirements.txt
-            pip install --quiet -r requirements-optional.txt
+            # pip install --quiet -r requirements-optional.txt
             pip install coverage
             pip install codacy-coverage
             coverage run setup.py test
