--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
             pip install --upgrade pip
             pip install --quiet -r requirements.txt
             # pip install --quiet -r requirements-optional.txt
+            pip install -e .
             pip install coverage
             pip install codacy-coverage
             coverage run setup.py test
