--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
             pip install --upgrade pip
             pip install --quiet -r requirements.txt
 
-            pip install --quiet -r requirements-optional.txt
-            
+            # pip install --quiet -r requirements-optional.txt
+
             # temporarily avoid pip install of matminer
             git clone https://github.com/hackingmaterials/matminer.git
             cd matminer
