update circle config to cache dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,14 @@ jobs:
           CI: "CIRCLE"
     steps:
       - checkout
+
+    # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "requirements.txt" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+          
       - run:
           name: setup env and run tests
           command: |
@@ -33,3 +41,8 @@ jobs:
             coverage xml
             python-codacy-coverage -r coverage.xml
           no_output_timeout: 120m
+
+      - save_cache:
+          paths:
+          - ./test_env
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
