--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
     docker:
       - image: circleci/python:3.7.2
         environment:
+          CODACY_PROJECT_TOKEN: "0cdf090f6d5f4f8783fcf3ce04c6a1d6"
           CI: "CIRCLE"
     steps:
       - checkout
@@ -104,7 +105,6 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - py367
       - py372
 
 
