--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
             # temporarily avoid pip install of matminer
             mkdir matminer
             cd matminer
-            git clone https://github.com/ardunn/matminer.git
+            git clone https://github.com/hackingmaterials/matminer.git
             cd matminer
             pip install -q -e .
             cd ../..
