--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+# Requirements of this project alone
 matminer==0.5.0
 xlrd==1.1.0
 xgboost==0.72.1
 tpot==0.9.5
 skrebate==0.6
+
+# Also requirements of matminer
+numpy
+pandas
+scipy
+scikit_learn
