--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include CHANGELOG.md
 include CONTRIBUTING.md
 recursive-include tutorials
+recursive-include automatminer
 recursive-exclude dev
