try fix versioning problem

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE
 include CHANGELOG.md
 include CONTRIBUTING.md
+include VERSION
 recursive-include tutorials
 recursive-include automatminer
 recursive-exclude dev
