--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Requirements of this project alone
-matminer>=0.5.8
+matminer==0.5.8
 xlrd==1.1.0
 xgboost==0.80
 tpot==0.10.1
 skrebate==0.6
+pymatgen==2019.7.21
 
 # Also requirements of matminer
 numpy
 pandas
-pymatgen
 scikit_learn
