--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,12 +31,12 @@ jobs:
             # pip install --quiet -r requirements-optional.txt
 
             # temporarily avoid pip install of matminer
-            # mkdir matminer
-            # cd matminer
-            # git clone https://github.com/hackingmaterials/matminer.git
-            # cd matminer
-            # pip install -q -e .
-            # cd ../..
+            mkdir matminer
+            cd matminer
+            git clone https://github.com/hackingmaterials/matminer.git
+            cd matminer
+            pip install -q -e .
+            cd ../..
 
             pip install -e .
             pip install -q coverage
