--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ xlrd==1.1.0
 xgboost==0.80
 tpot==0.10.1
 skrebate==0.6
-pymatgen==2019.7.21
 
 # Also requirements of matminer
 numpy
 pandas
 scikit_learn
+pymatgen
