update setup and tasks [skip ci]

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,5 @@
 include LICENSE
 include CHANGELOG.md
 include CONTRIBUTING.md
-recursive-include automatminer
-recursive-exclude benchdev
-recursive-exclude benchdev/*
-recursive-exclude benchdev*
+recursive-include automatminer *.txt *.py *.yaml *.json *.csv
+recursive-exclude benchdev *
