--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include CHANGELOG.md
 include CONTRIBUTING.md
-recursive-include automatminer *.txt *.py *.yaml *.json *.csv
+recursive-include automatminer *.txt *.py *.yaml *.json *.csv *.p *.pickle
 recursive-exclude benchdev *
