--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Requirements of this project alone
-matminer==0.6.1
+# matminer==0.6.1
+-e git://github.com/hackingmaterials/matminer.git#egg=matminer
 xlrd==1.1.0
 xgboost==0.80
 tpot==0.10.2
