change matminer back to 0.6.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Requirements of this project alone
-# matminer==0.6.1
--e git://github.com/hackingmaterials/matminer.git#egg=matminer
+matminer==0.6.1
 xgboost==0.80
 tpot==0.10.2
 skrebate==0.6
