--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,29 +22,10 @@ jobs:
       - run:
           name: setup env and run tests
           command: |
-            echo "SKIPPING INTENSIVE TESTS? $SKIP_INTENSIVE"
-            python3 -m venv test_env
-            . test_env/bin/activate
-            pip install -q --upgrade pip
-            pip install --quiet -r requirements.txt
 
-            # pip install --quiet -r requirements-optional.txt
+            source dev_scripts/setup_env.sh
+            source dev_scripts/run_tests.sh
 
-            # temporarily avoid pip install of matminer
-            mkdir matminer
-            cd matminer
-            git clone https://github.com/hackingmaterials/matminer.git
-            cd matminer
-            pip install -q -e .
-            cd ../..
-
-            pip install -e .
-            pip install -q coverage
-            pip install -q codacy-coverage
-
-            coverage run setup.py test
-            coverage xml
-            python-codacy-coverage -r coverage.xml
           no_output_timeout: 10m
 
       - save_cache:
