flake8 config set max-line-length 79 and max-complexity 12

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [flake8]
-max-line-length = 100
+max-line-length = 79
+max-complexity = 12
 exclude = .git
 # E731: do not assign a lambda expression, use a def
 # W503: line break before binary operator
