--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [flake8]
-max-line-length = 79
+max-line-length = 85
 max-complexity = 12
 exclude = .git
 # E731: do not assign a lambda expression, use a def
 # W503: line break before binary operator
-ignore = E731, W503
+ignore = E731, W503, C901
 
 # Make isort play nicely with black's import formatting.
 # https://github.com/microsoft/vscode-python/issues/5840
