--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,38 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
 
+  code_style:
+    working_directory: ~/py372_automatminer
+    docker:
+      - image: circleci/python:3.7.2
+    steps:
+      - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run:
+          name: setup env and run tests
+          command: |
+            source dev_scripts/setup_env_dev.sh
+            source dev_scripts/run_code_style_check.sh
+
+          no_output_timeout: 10m
+
+      - save_cache:
+          paths:
+            - ./test_env
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
+
+
+
 workflows:
   version: 2
   run_tests_on_commit:
     jobs:
       - py372
+      - code_style
