--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max-complexity = 12
 exclude = .git
 # E731: do not assign a lambda expression, use a def
 # W503: line break before binary operator
+# C901: function is too complex
 ignore = E731, W503, C901
 
 # Make isort play nicely with black's import formatting.
