--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
+# Ensure this is the same value as line-length under [tool.black] in pyproject.toml.
 max-line-length = 85
 max-complexity = 12
 exclude = .git
