--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,12 @@ jobs:
       - checkout
 
     # Download and cache dependencies
-#      - restore_cache:
-#          keys:
-#          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-#          - v1-dependencies-
+    # Try commenting this out if there are ContextualVersionConflict errors
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "requirements.txt" }}
+#           fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
       - run:
           name: setup env and run tests
