--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ skrebate==0.6
 pyyaml==5.1.2
 
 # Also requirements of matminer
-numpy
-pandas
-scikit_learn
-pymatgen
+# numpy
+# pandas
+# scikit_learn
+# pymatgen
